add updated project file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         href="https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat&family=Poppins:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />">
 </head>
 
 <body>
@@ -46,7 +49,7 @@
                 Donec quis lorem nulla. Nunc eu odio mi. Morbi nec lobortis est. Sed fringilla, nunc sed imperdiet
                 lacinia, nisl ante egestas mi, ac facilisis ligula sem id neque.
             </p>
-            
+
             <div id="about-links">
                 <span>Our story</span>
                 <span>Icon here</span>
@@ -67,9 +70,9 @@
         </div>
 
     </section>
-    
+
     <section id="menu">
-         <div class="sub-header">   <!--copied this from the about -->
+        <div class="sub-header"> <!--copied this from the about -->
             <span class="courgette-regular">Discover</span>
             <span class="poppins-bold">Menu</span>
         </div>
@@ -95,7 +98,7 @@
         </div>
     </section>
 
-     <section id="video-sec">    <!-- --copied from discover -->
+    <section id="video-sec"> <!-- --copied from discover -->
         <video id="video" autoplay loop>
             <source src="./assets/videos/3196176-uhd_3840_2160_25fps.mp4" type="video/mp4">
         </video>
@@ -105,7 +108,7 @@
                 <span class="poppins-bold">OUR VIDEOS</span>
             </div>
         </div>
-     </section>
+    </section>
 
     <section id="reservation">
         <div id="section1">
@@ -117,15 +120,15 @@
                 <div id="input-grid">
                     <span class="form-item">
                         <label for="date">Date</label>
-                        <input id="date" type="date"/>
+                        <input id="date" type="date" />
                     </span>
                     <span class="form-item">
                         <label for="date">Name</label>
-                        <input id="name" type="name"/>
+                        <input id="name" type="name" />
                     </span>
                     <span class="form-item">
                         <label for="time">Time</label>
-                        <input id="time" type="time"/>
+                        <input id="time" type="time" />
                         <select name="time" id="">
                             <option value="9:00">9:00</option>
                             <option value="9:30">9:30</option>
@@ -138,11 +141,11 @@
                     </span>
                     <span class="form-item">
                         <label for="phone">Phone</label>
-                        <input id="phone" type="number"/>
+                        <input id="phone" type="number" />
                     </span>
                     <span class="form-item">
                         <label for="people">People</label>
-                        <input id="people" type="people"/>
+                        <input id="people" type="people" />
                         <select name="People" id="">
                             <option value="People">1 Person</option>
                             <option value="People">2 People</option>
@@ -154,7 +157,7 @@
                     </span>
                     <span class="form-item">
                         <label for="email">Email</label>
-                        <input id="email" type="email"/>
+                        <input id="email" type="email" />
                     </span>
                 </div>
                 <div id="book-me">
@@ -166,7 +169,19 @@
     </section>
 
     <section>Reviews goes here</section>
-    <section>Footer goes here</section>
+    <section id="footer">
+        <img id="logo-footer" src="./assets/logos/logo-no-background.png" alt="Logo">
+        <p id="footer-text">Ruthlicious palace is a restaurant that provides delicious and healthy food.<br /> We serve
+            varieties of food and
+            drinks. Come and eat a healthy food.
+        </p>
+        <div id="footer-icon">
+            <a href=""><span><i class="fa-brands fa-facebook"></i></span></a>
+            <a href=""><span><i class="fa-brands fa-instagram"></i></span></a>
+            <a href=""><span><i class="fa-brands fa-google"></i></span></a>
+            <a href=""><span><i class="fa-brands fa-youtube"></i></span></a>
+        </div>
+    </section>
 </body>
 
 </html>
